2004-02-10  Joseph S. Myers  <jsm@polyomino.org.uk>

	* primes/primes.6: Update from NetBSD CVS.

2004-02-09  Joseph S. Myers  <jsm@polyomino.org.uk>

	* configure: Ask for a documentation directory if building trek or
	rogue.
	* Makeconfig.in (DOCDIR): Define.
	* substfiles2: Add trek/trek.6.
	* trek/trek.6: Rename to trek/trek.6.in.
	* trek/trek.6.in: Mark documentation directory for substitution.
	* rogue/Makefrag, trek/Makefrag: Install USD documents.
	* INSTALL, PACKAGING, README: Update.

2004-02-08  Joseph S. Myers  <jsm@polyomino.org.uk>

	* backgammon/backgammon/main.c, backgammon/teachgammon/teach.c,
	cribbage/cribbage.h, dm/dm.c, fortune/unstr/unstr.c,
	hunt/hunt/hunt.c, hunt/hunt/otto.c, hunt/huntd/faketalk.c,
	hunt/huntd/hunt.h, phantasia/Makefile.bsd, rain/rain.c,
	worms/worms.c: Update from NetBSD CVS.

	* rain/rain.c, worms/worms.c: Hide the cursor with curs_set(0).
	From OpenBSD.

	* tests/factor.8675309, tests/factor.6172538568: New tests (from
	NetBSD src/regress).
	* tests/factor.test: Update.

	* boggle/README.linux, dm/README.linux, fortune/README.linux,
	hunt/README.linux, trek/README.linux: Remove.
	* README: Move information from those files to here.
	* INSTALL: Update.
	* COPYING: Update.

	* factor/Makefile.bsd, factor/factor.6, factor/factor.c,
	primes/Makefile.bsd, primes/primes.6: Update from NetBSD CVS.

	* TODO: Update.

	* substscr: Explicitly set execute permissions from those of
	source file.

	* primes/primes.6: Separate manpage from that of factor.
	* primes/Makefrag: Update.
	* factor/factor.6: Change to be a manpage for factor only.

	* factor/factor.c: Only use Pollard p-1 if remaining factor isn't
	prime.  Correct comment.  Increase base if p-1 algorithm reaches
	1.
	* tests/factor.2147483647111311, tests/factor.99999999999991: New
	tests.
	* tests/factor.test: Update.
	Bugs reported by David A Bagley <bagleyd@tux.org>.

	* countmail/countmail.6, phantasia/fight.c, phantasia/io.c,