@@ -1,0 +1,1 @@
+Sat 2003 Jan 18 11:00:00 (UTC):  The Moon was Full
