@@ -1,0 +1,1 @@
+Mon 2003 Dec  8 21:00:00 (UTC):  The Moon was Full
