@@ -1,0 +1,1 @@
+Fri 2003 Jan 10 13:00:00 (UTC):  The Moon was at the First Quarter
