@@ -1,0 +1,1 @@
+Sun 2003 Nov 30 17:00:00 (UTC):  The Moon was at the First Quarter
