@@ -1,0 +1,1 @@
+Sat 2003 Jan 25 09:00:00 (UTC):  The Moon was at the Last Quarter
