@@ -1,0 +1,1 @@
+Tue 2003 Dec 16 18:00:00 (UTC):  The Moon was at the Last Quarter
