@@ -1,0 +1,1 @@
+Thu 2003 Jan  2 20:00:00 (UTC):  The Moon was New
