@@ -1,0 +1,1 @@
+Sun 2003 Nov 23 23:00:00 (UTC):  The Moon was New
