@@ -1,0 +1,1 @@
+Thu 2003 Jan  2 00:00:00 (UTC):  The Moon was Waning Crescent (1% of Full)
