@@ -1,0 +1,1 @@
+Mon 2003 Jan  6 00:00:00 (UTC):  The Moon was Waxing Crescent (11% of Full)
