@@ -1,0 +1,1 @@
+Sat 2003 Jan 11 00:00:00 (UTC):  The Moon was Waxing Gibbous (54% of Full)
