@@ -1,0 +1,1 @@
+Wed 2003 Jan 22 00:00:00 (UTC):  The Moon was Waning Gibbous (85% of Full)
