@@ -1,0 +1,1 @@
+Mon 2003 Sep  1 00:00:00 (UTC):  The Moon was Waxing Crescent (23% of Full)
