@@ -1,0 +1,1 @@
+Sun 2003 Sep  7 00:00:00 (UTC):  The Moon was Waxing Gibbous (85% of Full)
