@@ -1,0 +1,1 @@
+Mon 2003 Sep 15 00:00:00 (UTC):  The Moon was Waning Gibbous (83% of Full)
