@@ -1,0 +1,1 @@
+Mon 2003 Sep 22 00:00:00 (UTC):  The Moon was Waning Crescent (20% of Full)
